算法: 背包问题、字符串查找